added blocktext; small change to about-me

--- a/projects/b-thesis/index.html
+++ b/projects/b-thesis/index.html
@@ -15,6 +15,9 @@
             html, body {
                 height: 100%;
             }
+            .text-block {
+                text-align: justify;
+            }
         </style>
     </head>
     <body class="d-flex text-center mb-auto text-white" style="background-color: #1e524b;">
@@ -40,7 +43,7 @@
             <main class="d-flex px-3 flex-grow-1 align-items-center">
                 <div class="container d-flex flex-column w-75 text-start">
                     <h1 class="text-center p-5">Bachelor Thesis</h1>
-                    <p class="lead font-monospace">
+                    <p class="lead font-monospace text-block">
                         My bachelor's thesis was about "Lane detection by a 3D camera in a Robotic Operating System with Open Computer Vision". 
                     </p>
                     <p class="p-2 text-warning">
