--- a/projects/ronaldo/index.html
+++ b/projects/ronaldo/index.html
@@ -15,6 +15,9 @@
             html, body {
                 height: 100%;
             }
+            .text-block {
+                text-align: justify;
+            }
         </style>
     </head>
     <body class="d-flex text-center mb-auto text-white" style="background-color: #1e524b;">
@@ -40,35 +43,36 @@
             <main class="d-flex px-3 flex-grow-1 align-items-center">
                 <div class="container d-flex flex-column w-75 text-start">
                     <h1 class="text-center p-5">Ronaldo - My First Image Recognition Project</h1>
-                    <p class="lead font-monospace">The Ronaldo project is the second part of the <a href="https://danielbusse.github.io/projects/parkourmeister/" class="text-info">Parkourmeister</a> 
+                    <p class="lead font-monospace text-block">
+                        The Ronaldo project is the second part of the <a href="https://danielbusse.github.io/projects/parkourmeister/" class="text-info">Parkourmeister</a> 
                         project. The task was to detect a red ball and navigate the robot to kick it by driving into it. My project partner and I chose this task ourselves, 
                         because we were interested in the topic of image recognition.</p>
                     </p>
-                    <p class="p-2">
+                    <p class="p-2 text-block">
                         For this project we used a modified Nibo2 robot with additional features as displayed in the image below. The Nibo was equipped with an extra 
                         layer on top of his construction that housed a Raspberry Pi 1 Model B and a cheap webcam. The Communication between both devices would be 
                         established over an XBEE Module. The Master was on the Raspberry and the Client on the nibo. This was due to the Raspberry being the decision 
                         maker and the nibo just following instructions.
                     </p>
                     <img src="https://danielbusse.github.io/img/modified_nibo2.png" class="mx-auto d-block img-fluid p-4" alt="schematic of the modified nibo robot">
-                    <p>
+                    <p class="p-2 text-block">
                         The detection of the ball was done by converting the colorspace of the image to hsv and matting the pixels in certain ranges to end up with red 
                         pixels only. With only red pixels apparent the image was searched for circles. For this the OpenCV functions cvCvtColor, cvInRange and cvHoughCircles 
                         were used. The Coordinates of the center of the ball would then determine the action of the nibo depending on the position in the frame.
                     </p>
                     <img src="https://danielbusse.github.io/img/ball_detection_thresholds.jpg" class="mx-auto d-block img-fluid p-4" alt="visualization of the detection and threshold setting">
-                    <p>
+                    <p class="p-2 text-block">
                         The movement pattern of the Nibo consited of different States. First was the searching state where no ball could be detected. If a ball was found 
                         but not positioned well the Nibo would get into the approach state. If a ball was detected and positioned well the Nibo would go into the shooting state.
                         The Raspberry would determine these states by thresholds on the balls position in frame. Then it would communicate a state switch over XBEE.
                     </p>
-                    <P>
+                    <P class="p-2 text-block">
                         In the search state the Nibo would rotate around itself to get a 360 ° look. This would happen indefinitely if no ball can be found. The approach 
                         state based on data provided by the Raspberry. Depending on this data the nibo would change its relative rotation and position to the ball. The 
                         goal would be to get the ball in a good position for shooting. In the shooting state the Nibo would approach the ball with high speed (for a Nibo)
                         until he hits it.
                     </P>
-                    <p>
+                    <p class="p-2 text-block">
                         The result of this project was a success. In the demonstration ronaldo performed superb, maybe even better than his namesake. We also got a first 
                         glance at image recognition and OpenCV and were able to learn more about embedded systems.
                     </p>
