--- a/projects/telematikprojekt/index.html
+++ b/projects/telematikprojekt/index.html
@@ -15,6 +15,9 @@
             html, body {
                 height: 100%;
             }
+            .text-block {
+                text-align: justify;
+            }
         </style>
     </head>
     <body class="d-flex text-center mb-auto text-white" style="background-color: #1e524b;">
@@ -40,7 +43,7 @@
             <main class="d-flex px-3 flex-grow-1 align-items-center">
                 <div class="container d-flex flex-column w-75 text-start">
                     <h1 class="text-center p-5">Telematikprojekt</h1>
-                    <p class="lead font-monospace">
+                    <p class="lead font-monospace text-block">
                         The "Telematikprojekt" is a project in the curriculum of the telematics master on my university that stretches over two semesters with 
                         the first being the planning phase and the second being the development phase.
                     </p>
