--- a/about-me/index.html
+++ b/about-me/index.html
@@ -51,7 +51,7 @@
                         <p class="text-block mb-4">
                             I love to be creative! And I express my creativity by making music, video game development and conceptualizing. I also enjoy 
                             doing team sports. The emphasis on teamwork in sports is important to me than competition. Sports I like to play are volleyball, 
-                            football (soccer) and many more — there are way too many to list and it's always fun to learn something new anyway.
+                            football (soccer) and many more — it's always fun to learn something new.
                         </p>
                         <p class="text-block mb-4">
                             I am a logical and strategic thinker. I like to play video games of different genres but mostly with strategic elements.
@@ -60,7 +60,7 @@
                         </p>
                         <p class="text-block mb-4">
                             Music is my longest-running passion. I've been playing guitar since primary school and still jam with others regularly. Besides guitar I 
-                            like playing other instruments like piano and drums, even though I am a beginner with them. And like most people, I love listening 
+                            like playing other instruments like piano and drums, even though I'm not an expert with them. And like most people, I love listening 
                             to music and discussing it with others.
                         </p>
                         <p class="text-block mb-4">
