--- a/projects/parkourmeister/index.html
+++ b/projects/parkourmeister/index.html
@@ -15,6 +15,9 @@
             html, body {
                 height: 100%;
             }
+            .text-block {
+                text-align: justify;
+            }
         </style>
     </head>
     <body class="d-flex text-center mb-auto text-white" style="background-color: #1e524b;">
@@ -40,32 +43,32 @@
             <main class="d-flex px-3 flex-grow-1 align-items-center">
                 <div class="container d-flex flex-column w-75 text-start">
                     <h1 class="text-center p-5">Parkourmeister - my first robotics project</h1>
-                    <p class="lead p-2 font-monospace">
+                    <p class="lead p-2 font-monospace text-block">
                         This project emerged out of the Software Engineering I course of my bachelor. This project has two parts, "Parkourmeister" and "Ronaldo". 
                         Latter will not be covered here but can be found under <a href="https://danielbusse.github.io/projects/" class="text-info">the projects section</a>.
                     </p>
-                    <p class="p-2">
+                    <p class="p-2 text-block">
                         The task was to develop an algorithm to traverse the NIBO 2 through a labyrinth-like parcour with deadends and very slim sections. The 
                         goal was to reach the exit, which opened to an open area.
                     </p>
-                    <p class="p-2">
+                    <p class="p-2 text-block">
                         To sense the environment, the NIBO 2 is equipped with multiple sensors as can be seen in the following image. It has 5 IR-Sensors in its 
                         front section facing left, right, front and diagonally to the front and each side. There are also floorsensors that sense, if there is a 
                         floor beneath these sensors. Besides these there are also linesensors, witch were not used in this project.
                     </p>
                     <img src="https://danielbusse.github.io/img/nibo_sensors.png" class="mx-auto d-block img-fluid p-4" alt="Sensorlayout of the NIBO 2 robot">
-                    <p class="p-2">
+                    <p class="p-2 text-block">
                         The Algorithm to traverse the parcours was a simple state machine that acted depending on its sensor input. Dependent on the current state 
                         and its sensors the robot switches the state to another one or stay in the same state. These states shape the behavior of the robot.
                     </p>
-                    <p class="p-2">
+                    <p class="p-2 text-block">
                         The floorsensors would stop the robot immediately and set it into the stop-state if they triggered. This is necessary to prevent the robot 
                         from falling off an edge. Besides that they acted as a detector that checks if a direction in front of the robot is blocked.
                         <br>
                         The IR sensors are used to sense walls and their proximity to the robot. There were two thresholds to seperate the detected data into three states: 
                         clear, close and blocked. 
                     </p>
-                    <p>
+                    <p class="p-2 text-block">
                         The state-logic is vaguely summarized in the following table:
                         <table class="table table-dark table-striped table-hover">
                             <thead>
@@ -145,7 +148,7 @@
                             </tbody>
                         </table>
                     </p>
-                    <p class="p-2">
+                    <p class="p-2 text-block">
                         Algorithmically, the robot prefers stopping over left turns over straights over right turns over backwards. This way it may solve any labyrinth mithout loops. 
                         If there is a loop present in the labyrinth the robot may get trapped in this loop. But since the parcour to solve would not contain these, we 
                         did not have to solve this problem to complete the course.
