implemented amons changes: years for projects; Backgrounds for badly readable images; some grammar or phrasing corrections

--- a/about-me/index.html
+++ b/about-me/index.html
@@ -50,9 +50,9 @@
                         </p>
                         <p class="text-block mb-4">
                             I love to be creative! And I express my creativity by making music, video game development and conceptualizing. I also enjoy 
-                            doing team sports. The emphasis on teamwork in sports is important to me than competition. Sports I like to play are volleyball, 
-                            football (soccer) and many more — it's always fun to learn something new. Every summer, I volunteer as staff at an English summer 
-                            camp for teenagers in a rural region of Brandenburg.
+                            doing team sports. The emphasis on teamwork in sports is more important to me than competition. Sports I like to play are volleyball, 
+                            football (soccer) and many more — it's always fun to learn something new. Every summer, I volunteer as staff at an english 
+                            camp for teenagers in a rural region of Brandenburg, as well as multiple reunions throughout the year amongst the same community.
                         </p>
                         <p class="text-block mb-4">
                             I am a logical and strategic thinker. I like to play video games of different genres but mostly with strategic elements.
