--- a/projects/parkourmeister/index.html
+++ b/projects/parkourmeister/index.html
@@ -45,7 +45,7 @@
                     <h1 class="text-center p-5">Parkourmeister - my first robotics project</h1>
                     <p class="lead p-2 font-monospace text-block">
                         This project emerged out of the Software Engineering I course of my bachelor. This project has two parts, "Parkourmeister" and "Ronaldo". 
-                        Latter will not be covered here but can be found under <a href="https://danielbusse.github.io/projects/" class="text-info">the projects section</a>.
+                        Latter will not be covered here but can be found under <a href="https://danielbusse.github.io/projects/ronaldo/" class="text-info">the ronaldo project</a>.
                     </p>
                     <p class="p-2 text-block">
                         The task was to develop an algorithm to traverse the NIBO 2 through a labyrinth-like parcour with deadends and very slim sections. The 
@@ -56,7 +56,7 @@
                         front section facing left, right, front and diagonally to the front and each side. There are also floorsensors that sense, if there is a 
                         floor beneath these sensors. Besides these there are also linesensors, witch were not used in this project.
                     </p>
-                    <img src="https://danielbusse.github.io/img/nibo_sensors.png" class="mx-auto d-block img-fluid p-4" alt="Sensorlayout of the NIBO 2 robot">
+                    <img src="https://danielbusse.github.io/img/nibo_sensors.png" class="mx-auto d-block img-fluid p-4 bg-secondary" alt="Sensorlayout of the NIBO 2 robot">
                     <p class="p-2 text-block">
                         The Algorithm to traverse the parcours was a simple state machine that acted depending on its sensor input. Dependent on the current state 
                         and its sensors the robot switches the state to another one or stay in the same state. These states shape the behavior of the robot.
