--- a/projects/telematikprojekt/index.html
+++ b/projects/telematikprojekt/index.html
@@ -51,14 +51,8 @@
                         This page will be added in soon!
                     </p>
                     <img src="https://danielbusse.github.io/img/1.png" class="mx-auto d-block img-fluid p-4" alt="Drone">
-                    <div class="row">
-                        <div class="col">
-                            <img src="https://danielbusse.github.io/img/2.png" class="mx-auto d-block img-fluid p-4" alt="Drone with labels">
-                        </div>
-                        <div class="col">
-                            <img src="https://danielbusse.github.io/img/3.png" class="mx-auto d-block img-fluid p-4" alt="Drone with labels">
-                        </div>
-                    </div>
+                    <img src="https://danielbusse.github.io/img/2.png" class="mx-auto d-block img-fluid p-4 bg-secondary" alt="Drone with labels">
+                    <img src="https://danielbusse.github.io/img/3.png" class="mx-auto d-block img-fluid p-4 bg-secondary" alt="Drone with labels">
                 </div>
             </main>
             <footer class="mt-auto text-white-50">
