--- a/projects/index.html
+++ b/projects/index.html
@@ -51,6 +51,10 @@
                                     <span class="badge bg-secondary rounded-5">
                                         <abbr title="still beeing edited">🏗️</abbr>
                                     </span>
+                                    <span class="badge rounded-pill bg-dark fw-normal fst-italic fs-6 position-absolute translate-middle-y ms-2">
+                                        '22 - '23
+                                        <span class="visually-hidden">Year</span>
+                                    </span>
                                 </h3>
                                 <p class="card-text mb-4">
                                     Detecting radioactive radiation with an autonomous Drone and displaying it
@@ -72,6 +76,10 @@
                                     <span class="badge bg-secondary rounded-5">
                                         <abbr title="still beeing edited">🏗️</abbr>
                                     </span>
+                                    <span class="badge rounded-pill bg-dark fw-normal fst-italic fs-6 position-absolute translate-middle-y ms-2">
+                                        '21
+                                        <span class="visually-hidden">Year</span>
+                                    </span>
                                 </h3>
                                 <p class="card-text mb-4">
                                     Lane detection with a 3D camera in a Robotic Operating System with Open Computer Vision
@@ -87,7 +95,13 @@
                         <div class="row mb-2 border rounded overflow-hidden flex-md-row mb-4 shadow-smh-md-250 position-relative">
                             <div class="col p-4 d-flex flex-column position-static">
                                 <strong class="d-inline-block mb-2 text-primary-emphsis fw-lighter fs-6 fst-italic text-white-50">Robotics, Object Detection</strong>
-                                <h3 class="p-2">NaoLino - Object detection with the NAO robot</h3>
+                                <h3 class="p-2">
+                                    NaoLino - Object detection with the NAO robot
+                                    <span class="badge rounded-pill bg-dark fw-normal fst-italic fs-6 position-absolute translate-middle-y ms-2">
+                                        '18
+                                        <span class="visually-hidden">Year</span>
+                                    </span>
+                                </h3>
                                 <p class="card-text mb-4">
                                     Detecting selected Objects with the NAO robot and pointing at them 
                                 </p>
@@ -102,7 +116,13 @@
                         <div class="row mb-2 border rounded overflow-hidden flex-md-row mb-4 shadow-smh-md-250 position-relative">
                             <div class="col p-4 d-flex flex-column position-static">
                                 <strong class="d-inline-block mb-2 text-primary-emphsis fw-lighter fs-6 fst-italic text-white-50">Robotics, Image Recognition</strong>
-                                <h3 class="p-2">Ronaldo - Detecting and kicking a ball</h3>
+                                <h3 class="p-2">
+                                    Ronaldo - Detecting and kicking a ball
+                                    <span class="badge rounded-pill bg-dark fw-normal fst-italic fs-6 position-absolute translate-middle-y ms-2">
+                                        '17
+                                        <span class="visually-hidden">Year</span>
+                                    </span>
+                                </h3>
                                 <p class="card-text mb-4">
                                     Detecting a red ball with a modified NIBO 2, aiming at the ball and kicking it with the robot
                                 </p>
@@ -117,7 +137,13 @@
                         <div class="row mb-2 border rounded overflow-hidden flex-md-row mb-4 shadow-smh-md-250 position-relative">
                             <div class="col p-4 d-flex flex-column position-static">
                                 <strong class="d-inline-block mb-2 text-primary-emphsis fw-lighter fs-6 fst-italic text-white-50">Robotics, Navigation</strong>
-                                <h3 class="p-2">Parkourmeister - My First Robotics Project</h3>
+                                <h3 class="p-2">
+                                    Parkourmeister - My First Robotics Project
+                                    <span class="badge rounded-pill bg-dark fw-normal fst-italic fs-6 position-absolute translate-middle-y ms-2">
+                                        '17
+                                        <span class="visually-hidden">Year</span>
+                                    </span>
+                                </h3>
                                 <p class="card-text mb-4">
                                     Navigating a parcour (Labyrinth-like) and exiting it with a NIBO 2 Robot
                                 </p>
